package com.example.myapplication;

import java.util.Map;

public interface DialogListener {
    void onFinishDialog(Map<String, Object> inputText);
}
